# cookiecutter-ds-poetry

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/notebooks/: 0.0-exp-example-nb.ipynb
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/data/: make_dataset.py
